2009-12-31 Yu-Sung Su     <ys463@columbia.edu> 
   * DESCRIPTION (Version, Date): 0.08-06
   * R/mi.info: fix a bug in the include slot of update.mi.info

2009-12-21 Yu-Sung Su     <ys463@columbia.edu> 
   * DESCRIPTION (Version, Date): 0.08-05
   * R/mi: clean up code.

2009-12-1 Yu-Sung Su  <ys463@columbia.edu> 
   * R/mi.continuous, mi.binary, mi.count: overwrite and use of mf objects to save 
      memory

2009-12-1 Yu-Sung Su  <ys463@columbia.edu> 
   * R/mi.continuous, mi.binary, mi.count: overwrite and use of mf objects to save 
      memory

2009-11-30 Yu-Sung Su     <ys463@columbia.edu> 
   * R/mi.continuous, mi.binary, mi.count: hide new X's into the draw.from.beta loop 
    to save memory.

2009-7-21 Yu-Sung Su     <ys463@columbia.edu> 
   * DESCRIPTION (Version, Date): 0.08-04
   * R/mi.info: fix a slot changing logic in update.mi.info


2009-6-23 Yu-Sung Su     <ys463@columbia.edu> 
   * DESCRIPTION (Version, Date): 0.08-03
   * R/mi: fix a bug in mi.mi, (sampling from wrong data)

2009-6-19 Yu-Sung Su     <ys463@columbia.edu> 
   * R/mi.continuous, m.binary, mi.count: n.iter=5 if !is.null(start)

2009-6-18 Yu-Sung Su     <ys463@columbia.edu>  
   * DESCRIPTION (Version, Date): 0.08-02
   * AllInternal: coerce numerical unordered-categorical variable into  
      factor variable (as.factor(as.characer(x)))

2009-6-17 Yu-Sung Su     <ys463@columbia.edu>  
   * R/mi.continuous, mi.binary, mi.count: better way to get xb.

2009-6-16 Yu-Sung Su     <ys463@columbia.edu>  
   * DESCRIPTION (Version, Date): 0.08-01
   * R/mi.continuous, mi.binary, mi.count: draw.from.beta=TRUE, fix a bug
      in getting design matrix X.
   * R/mi.count: fix a bug in computing lambda.
   * R/mi: take out redundant code in mi method.
   * R/update.mi.info: formula no longer needs factor()
   
   
2009-6-10 Yu-Sung Su     <ys463@columbia.edu>  
   * DESCRIPTION (Version, Date): 0.07-4
   * R/mi.pooled: fix a bug in mi.pooled (B term)
