@@ -1,3 +1,6 @@
+
+
+
 2009-4-5 Yu-Sung Su     <ys463@columbia.edu>  
   * bayesglm for linear regression seems buggy.
   * mi.polr seems to create NaN.
